fix(coupon): add coupon popup title word wrap (#81)

--- a/public/scss/components/PopUpVoucherCoupon.module.scss
+++ b/public/scss/components/PopUpVoucherCoupon.module.scss
@@ -143,6 +143,8 @@
   background-color: $color_white;
   border-radius: 2px;
   overflow-y: auto;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 
   @media screen and (min-width: #{$breakpoint_min_md})
   {
@@ -153,6 +155,11 @@
   {
     padding: 24px 135px;
   }
+}
+
+.voucherContainer::-webkit-scrollbar
+{
+    display: none;
 }
 
 .voucherTitleInput
@@ -591,6 +598,7 @@
   @include fixedWidth(100%);
   padding: 12px 16px;
   border-bottom: 1px solid $color_placeholder;
+  word-wrap: anywhere;
 }
 
 .voucherDetailPopUpHeaderTitle
